fix NPE during bazel sync (file FilePosition.file maybe null)
GitOrigin-RevId: 7581d0ffdbce25bb851dae956e595c2e6c5d3b7c